# http-server-in-all-languages

./: .gitignore  README.md
C#/ASP.NET_Core/: ASP.NET_Core.sln  Program.cs
C#/ASP.NET_Core/Properties/: launchSettings.json
C#/ASP.NET_Core/wwwroot/: sample.html
Go/fiber/: go.mod  go.sum  main.go
Go/fiber/public/: style.css
Go/net-http/: main.go
Go/net-http/static/: index.html
Javascript/Express4/: Express4F.njsproj  Express4F.sln  package-lock.json  package.json
Julia/MyWebServer/: Manifest.toml  Project.toml
Julia/MyWebServer/public/: index.html
Julia/MyWebServer/public/css/: styles.css
Julia/MyWebServer/src/: MyWebServer.jl
Python/Django/server/: db.sqlite3
Python/Django/server/main/templates/: index.html
Python/Django/server/server/: settings.py  urls.py
Python/Flask/: app.py
Python/Flask/static/: script.js  style.css
Python/Flask/templates/: index.html  page2.html
Rust/axum_static_server/: Cargo.toml
Rust/axum_static_server/src/: main.rs
Rust/axum_static_server/static/: index.html
Rust/warp_static_server/: Cargo.toml
Rust/warp_static_server/html/: apple.html
Rust/warp_static_server/src/: main.rs
