[package]
name = "axum_static_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tokio-util = "0.6"
futures = "0.3"